# ethiobank_receipts

./: .gitignore  README.md  pyproject.toml  receipt.json  test.py
.github/workflows/: publish.yml
ethiobank_receipts/: __init__.py  cli.py  download.py
ethiobank_receipts/extractors/: awash.py  boa.py  cbe.py  dashen.py  tele.py  zemen.py
tests/: test_extractors.py
