[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ethiobank-receipts"
version = "0.1.0"
description = "Extract structured receipt data from Ethiopian bank PDFs and web pages."
authors = [{ name="Nahom Alemu"}]
readme = "README.md"
license = { text = "MIT" }
dependencies = ["requests", "pdfplumber", "beautifulsoup4", "selenium"]

urls = { 
    "Homepage" = "https://github.com/NahomAl/ethiobank_receipts",
    "Source" = "https://github.com/NahomAl/ethiobank_receipts",
    "Bug Tracker" = "https://github.com/NahomAl/ethiobank_receipts/issues"
}

[project.scripts]
ethiobank-receipts = "ethiobank_receipts.cli:main"
